# ed2023

./: Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml
src/: Makefile.am  abb.c  arvore.c  avl.c  avl.h  facom.c  facom.h  heap.c  main.c
tests/: Makefile.am  hash.c  test_abb.c  test_avl.c  test_avlg.c  test_heap.c  test_par.c
