TESTS = test_par test_heap test_abb
check_PROGRAMS = test_par test_heap test_abb

test_abb_SOURCES = test_abb.c $(top_builddir)/src/facom.h
test_abb_LDADD = $(top_builddir)/src/libfacom.la 


test_heap_SOURCES = test_heap.c $(top_builddir)/src/facom.h
test_heap_LDADD = $(top_builddir)/src/libfacom.la 

test_par_SOURCES = test_par.c $(top_builddir)/src/facom.h
test_par_LDADD = $(top_builddir)/src/libfacom.la 
