TESTS = test_par test_heap test_abb test_avl
check_PROGRAMS = test_par test_heap test_abb test_avl


test_avl_SOURCES = test_avl.c $(top_builddir)/src/facom.h
test_avl_LDADD = $(top_builddir)/src/libfacom.la 


test_abb_SOURCES = test_abb.c $(top_builddir)/src/facom.h
test_abb_LDADD = $(top_builddir)/src/libfacom.la 


test_heap_SOURCES = test_heap.c $(top_builddir)/src/facom.h
test_heap_LDADD = $(top_builddir)/src/libfacom.la 

test_par_SOURCES = test_par.c $(top_builddir)/src/facom.h
test_par_LDADD = $(top_builddir)/src/libfacom.la 
